ProjectManager/Grammar/Parser/ProjectManagerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/omar.nunez/Downloads/ProjectManager/ProjectManager/Grammar/Parser/ProjectManager.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class ProjectManagerParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SKIPPING=1, PROJECT_LBL=2, DESCRIPTION=3, ITERATION_INDENT=4, JOBS_IDENT=5, 
		ITERATIONS_REFERENCE=6, DURATION_IDENT=7, PRIORITY_IDENT=8, SIZE_IDENT=9, 
		LABELS_INDENT=10, PREDCESSORS_INDENT=11, START_DATE=12, END_DATE=13, MILESTONES_INDENT=14, 
		DOUBLE_SPACED_TEXT=15, DATE=16, NUM=17, TEXT=18, NL=19, WS=20;
	public const int
		RULE_program = 0, RULE_project = 1, RULE_body = 2, RULE_heading = 3, RULE_iterations = 4, 
		RULE_iteration_body = 5, RULE_milestones = 6, RULE_milestone = 7, RULE_jobs = 8, 
		RULE_job_body = 9, RULE_iteration = 10, RULE_duration = 11, RULE_priority = 12, 
		RULE_size = 13, RULE_labels = 14, RULE_label = 15, RULE_predecessors = 16, 
		RULE_predcessor = 17, RULE_date = 18, RULE_start_date = 19, RULE_end_date = 20;
	public static readonly string[] ruleNames = {
		"program", "project", "body", "heading", "iterations", "iteration_body", 
		"milestones", "milestone", "jobs", "job_body", "iteration", "duration", 
		"priority", "size", "labels", "label", "predecessors", "predcessor", "date", 
		"start_date", "end_date"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "SKIPPING", "PROJECT_LBL", "DESCRIPTION", "ITERATION_INDENT", "JOBS_IDENT", 
		"ITERATIONS_REFERENCE", "DURATION_IDENT", "PRIORITY_IDENT", "SIZE_IDENT", 
		"LABELS_INDENT", "PREDCESSORS_INDENT", "START_DATE", "END_DATE", "MILESTONES_INDENT", 
		"DOUBLE_SPACED_TEXT", "DATE", "NUM", "TEXT", "NL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ProjectManager.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ProjectManagerParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ProjectManagerParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ProjectManagerParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProjectContext project() {
			return GetRuleContext<ProjectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ProjectManagerParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			project();
			State = 43;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProjectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HeadingContext heading() {
			return GetRuleContext<HeadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_project; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProject(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProjectContext project() {
		ProjectContext _localctx = new ProjectContext(Context, State);
		EnterRule(_localctx, 2, RULE_project);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			heading();
			State = 46;
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public JobsContext jobs() {
			return GetRuleContext<JobsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IterationsContext iterations() {
			return GetRuleContext<IterationsContext>(0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_body; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BodyContext body() {
		BodyContext _localctx = new BodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_body);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 48;
				iterations();
				}
				break;
			}
			State = 51;
			jobs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROJECT_LBL() { return GetToken(ProjectManagerParser.PROJECT_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(ProjectManagerParser.NL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DESCRIPTION() { return GetToken(ProjectManagerParser.DESCRIPTION, 0); }
		public HeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeadingContext heading() {
		HeadingContext _localctx = new HeadingContext(Context, State);
		EnterRule(_localctx, 6, RULE_heading);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			Match(PROJECT_LBL);
			State = 54;
			Match(NL);
			State = 55;
			Match(DESCRIPTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IterationsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ITERATION_INDENT() { return GetToken(ProjectManagerParser.ITERATION_INDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Iteration_bodyContext[] iteration_body() {
			return GetRuleContexts<Iteration_bodyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Iteration_bodyContext iteration_body(int i) {
			return GetRuleContext<Iteration_bodyContext>(i);
		}
		public IterationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_iterations; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIterations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IterationsContext iterations() {
		IterationsContext _localctx = new IterationsContext(Context, State);
		EnterRule(_localctx, 8, RULE_iterations);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 57;
				Match(NL);
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 62;
			Match(ITERATION_INDENT);
			State = 64;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 63;
					iteration_body();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 66;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Iteration_bodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(ProjectManagerParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DateContext date() {
			return GetRuleContext<DateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MilestonesContext milestones() {
			return GetRuleContext<MilestonesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		public Iteration_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_iteration_body; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIteration_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Iteration_bodyContext iteration_body() {
		Iteration_bodyContext _localctx = new Iteration_bodyContext(Context, State);
		EnterRule(_localctx, 10, RULE_iteration_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 68;
				Match(NL);
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 73;
			Match(TEXT);
			State = 74;
			date();
			State = 75;
			milestones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MilestonesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MILESTONES_INDENT() { return GetToken(ProjectManagerParser.MILESTONES_INDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MilestoneContext[] milestone() {
			return GetRuleContexts<MilestoneContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MilestoneContext milestone(int i) {
			return GetRuleContext<MilestoneContext>(i);
		}
		public MilestonesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_milestones; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMilestones(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MilestonesContext milestones() {
		MilestonesContext _localctx = new MilestonesContext(Context, State);
		EnterRule(_localctx, 12, RULE_milestones);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 77;
				Match(NL);
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 82;
			Match(MILESTONES_INDENT);
			State = 84;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 83;
					milestone();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 86;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MilestoneContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE_SPACED_TEXT() { return GetToken(ProjectManagerParser.DOUBLE_SPACED_TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		public MilestoneContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_milestone; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMilestone(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MilestoneContext milestone() {
		MilestoneContext _localctx = new MilestoneContext(Context, State);
		EnterRule(_localctx, 14, RULE_milestone);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 88;
				Match(NL);
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 93;
			Match(DOUBLE_SPACED_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JobsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JOBS_IDENT() { return GetToken(ProjectManagerParser.JOBS_IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Job_bodyContext[] job_body() {
			return GetRuleContexts<Job_bodyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Job_bodyContext job_body(int i) {
			return GetRuleContext<Job_bodyContext>(i);
		}
		public JobsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_jobs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJobs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public JobsContext jobs() {
		JobsContext _localctx = new JobsContext(Context, State);
		EnterRule(_localctx, 16, RULE_jobs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 95;
				Match(NL);
				}
				}
				State = 98;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 100;
			Match(JOBS_IDENT);
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 101;
				job_body();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Job_bodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(ProjectManagerParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DurationContext duration() {
			return GetRuleContext<DurationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Start_dateContext start_date() {
			return GetRuleContext<Start_dateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IterationContext iteration() {
			return GetRuleContext<IterationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredecessorsContext predecessors() {
			return GetRuleContext<PredecessorsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PriorityContext priority() {
			return GetRuleContext<PriorityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SizeContext size() {
			return GetRuleContext<SizeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelsContext labels() {
			return GetRuleContext<LabelsContext>(0);
		}
		public Job_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_job_body; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJob_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Job_bodyContext job_body() {
		Job_bodyContext _localctx = new Job_bodyContext(Context, State);
		EnterRule(_localctx, 18, RULE_job_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 106;
				Match(NL);
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 111;
			Match(TEXT);
			State = 113;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 112;
				iteration();
				}
				break;
			}
			State = 115;
			duration();
			State = 116;
			start_date();
			State = 118;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 117;
				predecessors();
				}
				break;
			}
			State = 121;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 120;
				priority();
				}
				break;
			}
			State = 124;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				{
				State = 123;
				size();
				}
				break;
			}
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				{
				State = 126;
				labels();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IterationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ITERATIONS_REFERENCE() { return GetToken(ProjectManagerParser.ITERATIONS_REFERENCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(ProjectManagerParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		public IterationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_iteration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIteration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IterationContext iteration() {
		IterationContext _localctx = new IterationContext(Context, State);
		EnterRule(_localctx, 20, RULE_iteration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 129;
				Match(NL);
				}
				}
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 134;
			Match(ITERATIONS_REFERENCE);
			State = 135;
			Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DurationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DURATION_IDENT() { return GetToken(ProjectManagerParser.DURATION_IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUM() { return GetToken(ProjectManagerParser.NUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		public DurationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_duration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDuration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DurationContext duration() {
		DurationContext _localctx = new DurationContext(Context, State);
		EnterRule(_localctx, 22, RULE_duration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 137;
				Match(NL);
				}
				}
				State = 140;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NL );
			State = 142;
			Match(DURATION_IDENT);
			State = 143;
			Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PriorityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIORITY_IDENT() { return GetToken(ProjectManagerParser.PRIORITY_IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUM() { return GetToken(ProjectManagerParser.NUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(ProjectManagerParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(ProjectManagerParser.NL, i);
		}
		public PriorityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_priority; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProjectManagerVisitor<TResult> typedVisitor = visitor as IProjectManagerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPriority(this);
			else return visitor.VisitChildren(this);
		}
	}
